# mcp-obsidian-local

./: .gitignore  Makefile  README.md  agent.py  agent_v2.py  obsidian_mcp_server.py  pyproject.toml  test_agents.py
agents/: brain.md  executor.md  planner.md  researcher.md
skills/obsidian/: SKILL.md  _index.md  control.md  read.md  search.md  write.md
skills/terminal/: SKILL.md
skills/web/: SKILL.md
